<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:key="pref_fft_resolution"
        android:title="@string/pref_fft_resolution"
        android:dialogTitle="@string/pref_fft_resolution"
        android:summary=""
        android:entries="@array/pref_fft_resolution_entries"
        android:entryValues="@array/pref_fft_resolution_entries"
        android:defaultValue="@string/pref_fft_resolution_default" />
    <ListPreference
        android:key="pref_window"
        android:title="@string/pref_window_type"
        android:dialogTitle="@string/pref_window_type"
        android:summary=""
        android:entries="@array/pref_window_entries"
        android:entryValues="@array/pref_window_entries"
        android:defaultValue="@string/pref_window_type_default" />

    <ListPreference
        android:key="pref_colormap"
        android:title="@string/pref_colormap_type"
        android:dialogTitle="@string/pref_colormap_type"
        android:summary=""
        android:entries="@array/pref_colormap_entries"
        android:entryValues="@array/pref_colormap_values"
        android:defaultValue="@string/pref_colormap_type_default" />
    <ListPreference
        android:key="pref_db_floor"
        android:title="@string/pref_magnitude_db_floor"
        android:dialogTitle="@string/pref_magnitude_db_floor"
        android:summary=""
        android:entries="@array/pref_db_floor_entries"
        android:entryValues="@array/pref_db_floor_entries"
        android:defaultValue="@string/pref_magnitude_db_floor_default" />
</PreferenceScreen>