<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/audio_player_container"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/audio_player_height"
    android:layout_gravity="bottom"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:background="@drawable/fullscreen_bg_gradient"
    tools:context="ch.zhaw.bait17.audio_signal_processing_toolbox.ui.MainActivity" >

    <LinearLayout
        android:id="@+id/audio_player_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/text_view_margin"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/start"
                android:textColor="@android:color/white" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@+id/currentTime"
                android:layout_toStartOf="@+id/endTime" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/end"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageButton
                android:id="@+id/prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/skip_prev"
                android:onClick="onClickPreviousTrack"
                android:clickable="true"
                android:src="@drawable/ic_skip_previous_white_48dp" />

            <ImageButton
                android:id="@+id/play_pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/play_pause"
                android:onClick="onClickPlayPauseTrack"
                android:clickable="true"
                android:src="@drawable/uamp_ic_play_arrow_white_48dp" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/skip_next"
                android:onClick="onClickNextTrack"
                android:clickable="true"
                android:src="@drawable/ic_skip_next_white_48dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>