<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorAccent"
    android:orientation="vertical">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_low_pass_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_selector"
            android:onClick="onRadioButtonClicked"
            android:text="@string/low_pass_filter"></RadioButton>

        <TextView
            android:id="@+id/textview_low_pass_filter_spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3sp"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"></TextView>

        <RadioButton
            android:id="@+id/radio_high_pass_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_selector"
            android:onClick="onRadioButtonClicked"
            android:text="@string/high_pass_filter"></RadioButton>

        <TextView
            android:id="@+id/textview_high_pass_filter_spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3sp"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"></TextView>

        <RadioButton
            android:id="@+id/radio_band_pass_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_selector"
            android:onClick="onRadioButtonClicked"
            android:text="@string/band_pass_filter"></RadioButton>

        <TextView
            android:id="@+id/textview_band_pass_filter_spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3sp"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"></TextView>

        <RadioButton
            android:id="@+id/radio_band_stop_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_selector"
            android:onClick="onRadioButtonClicked"
            android:text="@string/band_stop_filter"></RadioButton>

        <TextView
            android:id="@+id/textview_band_stop_filter_spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3sp"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"></TextView>

        <RadioButton
            android:id="@+id/radio_no_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_selector"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/no_filter"></RadioButton>
    </RadioGroup>
</LinearLayout>