<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/playback_controls_padding">
    <ImageView
        android:id="@+id/album_art"
        tools:src="@drawable/ic_launcher"
        android:layout_width="@dimen/playback_controls_albumart_size"
        android:layout_height="@dimen/playback_controls_albumart_size"
        android:scaleType="centerCrop"
        android:contentDescription="@string/currently_playing_song"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/playback_controls_albumart_horizontal_margin"
        android:orientation="vertical"
        android:layout_toEndOf="@id/album_art"
        android:layout_toStartOf="@+id/play_pause"
        android:layout_centerVertical="true">
        <TextView
            android:id="@+id/song_title"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_song"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:id="@+id/song_artist"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_artist"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/play_pause"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_alignParentEnd="true"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_play_arrow_black_36dp"
        android:contentDescription="@string/play_pause"
        android:tintMode="src_in"
        android:tint="@color/bt_accent"/>
</RelativeLayout>
