<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/view_config_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_config_view1"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <Spinner
            android:id="@+id/spinner_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radioGroup_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/end_text_margin"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioButton_pre_filter_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_config_pre_fx"
                android:layout_gravity="center"
                android:textAlignment="gravity"
                android:layout_weight="1"
                android:button="@drawable/radio_selector"
                android:checked="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/secondary_text" />

            <RadioButton
                android:id="@+id/radioButton_post_filter_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_config_post_fx"
                android:layout_gravity="center"
                android:button="@drawable/radio_selector"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/secondary_text" />

            <RadioButton
                android:id="@+id/radioButton_pre_and_post_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_config_pre_and_post_fx"
                android:layout_gravity="center"
                android:textAlignment="gravity"
                android:button="@drawable/radio_selector"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/secondary_text" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_config_view2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinner_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radioGroup_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/end_text_margin"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioButton_pre_filter_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_config_pre_fx"
                android:layout_gravity="center"
                android:textAlignment="gravity"
                android:layout_weight="1"
                android:button="@drawable/radio_selector"
                android:checked="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/secondary_text" />

            <RadioButton
                android:id="@+id/radioButton_post_filter_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_config_post_fx"
                android:layout_gravity="center"
                android:textAlignment="gravity"
                android:layout_weight="1"
                android:button="@drawable/radio_selector"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/secondary_text" />

            <RadioButton
                android:id="@+id/radioButton_pre_and_post_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_config_pre_and_post_fx"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@drawable/radio_selector"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/secondary_text" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>